--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
 	"name": "mstsc.js",
 	"author": "Sylvain Peyrefitte",
 	"version": "0.2.4",
-	"engines": 
-	[
-		"node = 0.10.x"
+	"engines": [
+		"node = 0.10.x" 
 	],
 	"description": "A Remote Desktop Protocol Client written in javascript",
 	"license": "AGPL v3.0",
@@ -15,8 +14,9 @@
 	"main": "server.js",
 	"dependencies": {
 		"express": "4.x.x",
-		"socket.io": "1.3.x",
-		"node-rdpjs": ">=0.2.0"
+		"node-forge": "^1.3.1",
+		"node-rdpjs": ">=0.2.0",
+		"socket.io": "1.3.x"
 	},
 	"scripts": {
 		"start": "node server.js"
